@@ -22,6 +22,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - new freebsd5 mom arch for Freebsd 5.x and 6.x (trasz)
   f - new queue attribute "max_user_queable"
   e - optimize acl_group_sloppy
+  c - using depend=syncwith crashed pbs_server
 
 2.1.2
 
